opFT rework based on opLT results

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -5887,6 +5887,7 @@
   publisher    = {Research \& Education Association},
   year         = {2015},
   pages        = {170},
+  url          = {http://books.google.com/books?vid=ISBN9780738672458},
   }
 
 @misc{shapiro2015,
