--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -47,7 +47,7 @@ Let $\spLLRBu$ be the space of all
   }
 \end{definition}
 
-Such integrals may \prope{converge} for certain values of $s$ and \prope{diverge} for others. 
+Such integrals may \prope{converge} for certain values of $s$ and \prope{diverge} for others.
 %--------------------------------------
 \begin{definition}
 \label{def:roc}
@@ -59,8 +59,8 @@ Let $\opLT\brs{\fg(x)}$ be the \ope{Laplace Transform} \xref{def:opLT} of a func
   }
 \end{definition}
 
-In this text, the region of convergence may in places be specified using 
-the \structe{open interval} $\intoo{A}{B}$ and \structe{closed interval} 
+In this text, the region of convergence may in places be specified using
+the \structe{open interval} $\intoo{A}{B}$ and \structe{closed interval}
 $\intcc{A}{B}$\ifsxref{convex}{def:intcc}.
 
 %--------------------------------------
@@ -132,8 +132,8 @@ be $A\leq\Real(s)\leq B$ with $\opair{A}{B}\in\R^2$.
     && \text{by definition of $\opLT$}
     && \text{\xref{def:opLT}}
   \\&= \Lscale \int_{u/\alpha=-\infty}^{u/\alpha=\infty} \fg(u) e^{-s(u/\alpha)} \frac{1}{\alpha}\du
-    && 
-    && \text{where $u\eqd \alpha x$}   
+    &&
+    && \text{where $u\eqd \alpha x$}
     && \text{$\implies$ $x=\frac{u}{\alpha}$}
   \\&= \Lscale \frac{1}{\alpha}\int_{u/\alpha=-\infty}^{u/\alpha=\infty} \fg(u) e^{-(s/\alpha)u} \du
     &&
@@ -331,7 +331,7 @@ Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$.
       \\
       \opLT\brs{\cos\brp{\omega_o x} \fg(x)}
         &= \opLT\brs{\cosh\brp{i\omega_o x} \fg(x)}
-       %&& 
+       %&&
         && \text{by \prefp{thm:cosh}}
       \\&=  \frac{1}{2}\fG(s-i\omega_o) + \frac{1}{2}\fG(s+i\omega_o)
         && \text{by $\opLT\brs{\cos(\omega_o x)\fg(x)}$ result}
@@ -352,7 +352,7 @@ Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$.
   \item Region of Convergence of $\opLT\brs{\cos\brp{\omega_o x} \fg(x)}$ and $\opLT\brs{\sin\brp{\omega_o x} \fg(x)}$:
     {\begin{align*}
       &\opROC\opLT\brs{\sfrac{\cos}{\sin}\brp{\omega_o x} \fg(x)}
-      \\&= \opROC\opLT\brs{\brp{\frac{e^{ i\omega_o x} 
+      \\&= \opROC\opLT\brs{\brp{\frac{e^{ i\omega_o x}
                                   \pm e^{-i\omega_o x}}{2}} \fg(x)}
         &&  \text{by \thme{Euler's Identity}}
         &&  \text{\xref{thm:eid}}
@@ -374,7 +374,7 @@ Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$.
   \item Region of Convergence of $\opLT\brs{\cosh\brp{\omega_o x} \fg(x)}$ and $\opLT\brs{\sinh\brp{\omega_o x} \fg(x)}$:
     {\begin{align*}
       &\opROC\opLT\brs{\sfrac{\cosh}{\sinh}\brp{\omega_o x} \fg(x)}
-      \\&= \opROC\opLT\brs{\brp{\frac{e^{ \omega_o x} 
+      \\&= \opROC\opLT\brs{\brp{\frac{e^{ \omega_o x}
                                   \pm e^{-\omega_o x}}{2}} \fg(x)}
         &&  \text{by def. $\cosh(x)$, $\sinh(x)$}
         &&  \text{\xref{def:cosh}}
@@ -466,7 +466,7 @@ and $\step(x)$ the \fncte{unit step} function \xref{def:step}.
     && \Real(s) < 0
    %&& \text{by \ope{reversal} property \xref{cor:opLT_reversal} and \pref{thm:opLT_step}}
     && \text{by (1)}
-    && 
+    &&
 \end{align*}
 \end{proof}
 
@@ -501,8 +501,8 @@ and $\step(x)$ the \fncte{unit step} function.
     && \text{\xref{thm:opLT_step}}
   \\&= \frac{1}{s+\alpha}
     && \forall\Real(s) > -\Real(\alpha)
-    && 
-    && 
+    &&
+    &&
   \\\\
   \opLT\brs{e^{-\alpha x}\step(-x)}(s)
     &= \opLT\brs{\step(-x)}(s+\alpha)
@@ -679,7 +679,7 @@ and $\step(x)$ the \fncte{unit step} function.
       \\&= \frac{\omega_o}{s^2-\omega_o^2}
     \end{align*}
 
-  \item Region of Convergence of $\opLT\brs{\cosh(\omega_o x)\step( x)}$ and 
+  \item Region of Convergence of $\opLT\brs{\cosh(\omega_o x)\step( x)}$ and
         $\opLT\brs{\sinh(\omega_o x)\step( x)}$:
     \begin{align*}
       \opROC\opLT\brs{\cosh(\omega_o x)\step( x)}
@@ -716,7 +716,7 @@ and $\step(x)$ the \fncte{unit step} function.
       \\&= \frac{-\omega_o}{s^2-\omega_o^2}
     \end{align*}
 
-  \item Region of Convergence of $\opLT\brs{\cosh(\omega_o x)\step(-x)}$ and 
+  \item Region of Convergence of $\opLT\brs{\cosh(\omega_o x)\step(-x)}$ and
         $\opLT\brs{\sinh(\omega_o x)\step(-x)}$:
     \begin{align*}
       \opROC\opLT\brs{\cosh(\omega_o x)\step(-x)}
@@ -943,7 +943,7 @@ Let $A\eqd\Real(\alpha)$.
 \corbox{\begin{array}{>{\ds}lc>{\ds}l                                    D     l                            C }
     \mc{3}{H}{Mapping}                                                 & \mc{2}{|H}{Region of Convergence}& \mc{1}{|H}{Domain}
   \\\hline%                                                            &                                  &
-    \opLT\brs{e^{-\alpha\abs{x}}}  &=& \frac{2\alpha}{\alpha^2 - s^2}  & for & \Real(s) \in \intoo{-\alpha}{\alpha} & x,\alpha\in\C
+    \opLT\brs{e^{-\alpha\abs{x}}}  &=& \frac{2\alpha}{\alpha^2 - s^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\C
 \end{array}}
 \end{corollary}
 \begin{proof}
@@ -983,10 +983,10 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
 Let $A\eqd\Real(\alpha)$.
 \corbox{\begin{array}{F>{\ds}lc>{\ds}l                                    D     l                                                    C }
-    &\mc{3}{H}{Mapping}                                                                                            & \mc{2}{|H}{Region of Convergence}& \mc{1}{|H}{Domain}
-  \\\hline%                                                                                                        &                                  &
-    (1).& \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step( x)}  &=& \frac{ s+\alpha}{(s+\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
-  \\(2).& \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}  &=& \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
+    &\mc{3}{H}{Mapping}                                                                                                                                           & \mc{2}{|H}{Region of Convergence}& \mc{1}{|H}{Domain}
+  \\\hline%                                                                                                                                                       &                                  &
+    (1).& \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step( x)}  &=& \frac{ s+\alpha}{(s+\alpha)^2 + \omega_o^2}                                                 & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
+  \\(2).& \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}  &=& \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}                                                 & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
   \\(3).& \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}         }  &=& \frac{ s+\alpha}{(s+\alpha)^2 + \omega_o^2} +  \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
 \end{array}}
 \end{corollary}
@@ -1001,11 +1001,11 @@ Let $A\eqd\Real(\alpha)$.
         && \text{\xref{def:step}}
       \\&= \opLT\brs{\cos( \omega_o x)\step( x)}(s+\alpha)
         && \forall \Real(s) \in \intoo{0-\Real(\alpha)}{\infty-\Real(\alpha)}
-        && \text{by \prope{modulation} property}
+        && \text{by \prope{modulation} prop.}
         && \text{\xref{thm:opLT_mod}}
       \\&= \frac{s+\alpha}{(s+\alpha)^2 + \omega_o^2}
         && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
-        && \text{by \prefp{cor:opLT_step}}
+        && \mathrlap{\text{by \prefp{cor:opLT_step}}}
     \end{align*}
 
   \item Proof for (2):
@@ -1024,15 +1024,16 @@ Let $A\eqd\Real(\alpha)$.
       \\&= \opLT{\mcom{\cos(\omega_o(-x))\step(-x)}{$\fg(x)$}}(s-\alpha)
         && \text{by \prope{modulation} property}
         && \text{\xref{thm:opLT_mod}}
-      \\&= \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}
-        && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
-        && \text{by \pref{cor:opLT_step} and \prefp{thm:opLT_mod}}
+      \\&= \mathrlap{
+           \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}
+           \quad\forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
+           \quad\text{by \pref{cor:opLT_step} and \prefp{thm:opLT_mod}}}
     \end{align*}
 
   \item Proof for (3):
     \begin{align*}
-      &\opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}}
-      \\&= \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(x)}
+      \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}}
+        &= \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(x)}
          + \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}
       \\&= \opLT\brs{\cos( \omega_o x)e^{-\alpha x}\step( x)}
          + \opLT\brs{\cos(-\omega_o x)e^{ \alpha x}\step(-x)}
@@ -1040,101 +1041,101 @@ Let $A\eqd\Real(\alpha)$.
         && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
     \end{align*}
 
-  \item lemma: \label{ilem:opLT_cosexpstep}
-    \\$\begin{array}{>{\ds}rclM}
-         \lim_{x\to\infty}\brs{\frac{e^{(-s -\alpha \pm i\beta)x}}{-s -\alpha \pm i\beta}}
-           &=& \brbl{\begin{array}{lMM}
-                 0      & if $\Real(s)>-\alpha$ \\
-                 \infty & otherwise  & (diverges)
-               \end{array}}
-         \\
-         \lim_{x\to-\infty}\brs{\frac{e^{(-s +\alpha \pm i\beta)x}}{-s +\alpha \pm i\beta}}
-           &=& \brbl{\begin{array}{lMM}
-                 0      & if $\Real(s)<\alpha$ \\
-                 \infty & otherwise  & (diverges)
-               \end{array}}
-       \end{array}$
-
-  \item Alternate proof for (1):
-    \begin{align*}
-      &\boxed{\opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}\step(x)}}
-      \\&\eqd \int_{\R} \cos(\beta x)e^{-\alpha\abs{x}} e^{-s x} \step(x)\dx
-        && \text{by def. of $\opLT$}&& \text{\xref{def:opLT}}
-      \\&= \int_{\R} \brs{\frac{e^{i\beta x}+e^{-i\beta x}}{2}} e^{-\alpha\abs{x}} e^{-s x} \step(x)\dx
-        &&  \text{by \thme{Euler's Identity}}&&\text{\xref{thm:eid}}
-      \\&= \frac{1}{2}\int_{\R} \brs{e^{-\alpha\abs{x}+i\beta x -sx}+e^{-\alpha\abs{x}-i\beta x-sx}} \step(x)\dx
-      \\&= \frac{1}{2}\int_{0}^{\infty}  \brs{e^{(-s - \alpha +i\beta)x} + e^{(-s - \alpha -i\beta)x}} \dx
-        && \text{by definition of $\step(x)$}
-      \\&= \frac{1}{2} \brs{\frac{e^{(-s - \alpha +i\beta)x}}{-s -\alpha +i\beta} + \frac{e^{(-s -\alpha - i\beta)x}}{-s - \alpha -i\beta}}_{0}^{\infty}
-       %&& \text{by Fundamental Theorem of Calculus}
-      \\&= \frac{1}{2} \brs{(0+0)-\brp{\frac{1}{-s -\alpha +i\beta} + \frac{1}{-s -\alpha -i\beta}}}
-        && \Real(s)>-\alpha
-        && \text{by \pref{ilem:opLT_cosexpstep}}
-      \\&= \mathrlap{
-           \frac{1}{2}\brs{\frac{1}{s +\alpha -i\beta}} \brs{\frac{s +\alpha +i\beta}{s +\alpha +i\beta}} +
-           \frac{1}{2}\brs{\frac{1}{s +\alpha +i\beta}} \brs{\frac{s +\alpha -i\beta}{s +\alpha -i\beta}}
-           \qquad\Real(s)>-\alpha
-           }
-      \\&= \frac{1}{2}\brs{\frac{(s +\alpha +i\beta) + (s +\alpha -i\beta)}{(s +\alpha +i\beta)(s +\alpha -i\beta)}}
-        && \Real(s)>-\alpha
-      \\&= \boxed{\frac{s +\alpha}{(s +\alpha +i\beta)(s +\alpha -i\beta)}}
-        && \Real(s)>-\alpha
-      \\&= \boxed{\frac{s +\alpha}{(s +\alpha)^2 + \beta^2}}
-        && \Real(s)>-\alpha
-    \end{align*}
-
-  \item lemma: \label{ilem:opLT_cosexp}
-    \\$\begin{array}{>{\ds}rclM}
-         \lim_{x\to-\infty}\brs{e^{(-s + \alpha + i\beta)x} + e^{(s + \alpha -i\beta)x}}
-           &=& \brbl{\begin{array}{lMD}
-                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (Region of Convergence is $\intoo{-\alpha}{\alpha}$)\\
-                 \infty & otherwise                                    & (diverges)
-               \end{array}}
-         \\
-         \lim_{x\to\infty}\brs{e^{(-s -\alpha + i\beta)x} + e^{(s -\alpha -i\beta)x}}
-           &=& \brbl{\begin{array}{lMD}
-                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (Region of Convergence is $\intoo{-\alpha}{\alpha}$)\\
-                 \infty & otherwise                                    & (diverges)
-               \end{array}}
-       \end{array}$
-
-  \item Alternate proof for (3):
-    \begin{align*}
-      \boxed{\opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}}}
-        &\eqd \int_{\R} \cos(\beta x)e^{-\alpha\abs{x}} e^{-s x}\dx
-        && \text{by def. of $\opLT$}&& \text{\xref{def:opLT}}
-      \\&= \int_{\R} \brs{\frac{e^{i\beta x}+e^{-i\beta x}}{2}} e^{-\alpha\abs{x}} e^{-s x}\dx
-        &&  \text{by \thme{Euler's Identity}}&&\text{\xref{thm:eid}}
-      \\&= \frac{1}{2}\int_{\R} \brs{e^{-\alpha\abs{x}+i\beta x -sx}+e^{-\alpha\abs{x}-i\beta x-sx}} \dx
-      \\&= \mathrlap{
-           \frac{1}{2}\int_{-\infty}^{0} \brs{e^{(-s + \alpha +i\beta)x} + e^{(-s + \alpha -i\beta)x}} \dx
-         + \frac{1}{2}\int_{0}^{\infty}  \brs{e^{(-s - \alpha +i\beta)x} + e^{(-s - \alpha -i\beta)x}} \dx
-           }
-      \\&= \mathrlap{
-           \frac{1}{2} \brs{\frac{e^{(-s + \alpha +i\beta)x}}{-s +\alpha +i\beta} + \frac{e^{(-s +\alpha - i\beta)x}}{-s + \alpha -i\beta}}_{-\infty}^{0}
-         + \frac{1}{2} \brs{\frac{e^{(-s - \alpha +i\beta)x}}{-s -\alpha +i\beta} + \frac{e^{(-s -\alpha - i\beta)x}}{-s - \alpha -i\beta}}_{0}^{\infty}
-           }
-       %&& \text{by Fundamental Theorem of Calculus}
-      \\&= \mathrlap{
-           \frac{1}{2} \brs{\frac{1}{-s + \alpha +i\beta} + \frac{1}{ -s+ \alpha -i\beta} - (0+0)}
-         + \frac{1}{2} \brs{(0+0)-\brp{\frac{1}{-s -\alpha +i\beta} + \frac{1}{-s -\alpha -i\beta}}}
-           }
-      \\&\indentx\text{by \pref{ilem:opLT_cosexp}}
-      \\&= \brs{\frac{-1}{s -( \alpha + i\beta)}}
-         + \brs{\frac{1}{-s -(-\alpha + i\beta)}}
-      \\&= \frac{-[s -(-\alpha + i\beta)] + [s -( \alpha + i\beta)]}
-                { [s -( \alpha + i\beta)]   [s -(-\alpha + i\beta)]}
-      \\&= \boxed{
-           \frac{-2\alpha}
-                { [s -( \alpha + i\beta)]   [s -(-\alpha + i\beta)]}
-           }
-      \\&= \frac{-2\alpha}
-                { s^2 -2i s\beta + ( \alpha + i\beta)(-\alpha + i\beta)}
-      \\&= \frac{-2\alpha}
-                { s^2 -2i s\beta + -(\alpha^2-\beta^2)}
-      \\&= \boxed{\frac{-2\alpha}
-                       { (s -i\beta)^2 -\alpha^2}}
-    \end{align*}
+  %\item lemma: \label{ilem:opLT_cosexpstep}
+  %  \\$\begin{array}{>{\ds}rclM}
+  %       \lim_{x\to\infty}\brs{\frac{e^{(-s -\alpha \pm i\beta)x}}{-s -\alpha \pm i\beta}}
+  %         &=& \brbl{\begin{array}{lMM}
+  %               0      & if $\Real(s)>-\alpha$ \\
+  %               \infty & otherwise  & (diverges)
+  %             \end{array}}
+  %       \\
+  %       \lim_{x\to-\infty}\brs{\frac{e^{(-s +\alpha \pm i\beta)x}}{-s +\alpha \pm i\beta}}
+  %         &=& \brbl{\begin{array}{lMM}
+  %               0      & if $\Real(s)<\alpha$ \\
+  %               \infty & otherwise  & (diverges)
+  %             \end{array}}
+  %     \end{array}$
+  %
+  %\item Alternate proof for (1):
+  %  \begin{align*}
+  %    &\opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}\step(x)}
+  %    \\&\eqd \int_{\R} \cos(\beta x)e^{-\alpha\abs{x}} e^{-s x} \step(x)\dx
+  %      && \text{by def. of $\opLT$}&& \text{\xref{def:opLT}}
+  %    \\&= \int_{\R} \brs{\frac{e^{i\beta x}+e^{-i\beta x}}{2}} e^{-\alpha\abs{x}} e^{-s x} \step(x)\dx
+  %      &&  \text{by \thme{Euler's Identity}}&&\text{\xref{thm:eid}}
+  %    \\&= \frac{1}{2}\int_{\R} \brs{e^{-\alpha\abs{x}+i\beta x -sx}+e^{-\alpha\abs{x}-i\beta x-sx}} \step(x)\dx
+  %    \\&= \frac{1}{2}\int_{0}^{\infty}  \brs{e^{(-s - \alpha +i\beta)x} + e^{(-s - \alpha -i\beta)x}} \dx
+  %      && \text{by definition of $\step(x)$}
+  %    \\&= \frac{1}{2} \brs{\frac{e^{(-s - \alpha +i\beta)x}}{-s -\alpha +i\beta} + \frac{e^{(-s -\alpha - i\beta)x}}{-s - \alpha -i\beta}}_{0}^{\infty}
+  %     %&& \text{by Fundamental Theorem of Calculus}
+  %    \\&= \frac{1}{2} \brs{(0+0)-\brp{\frac{1}{-s -\alpha +i\beta} + \frac{1}{-s -\alpha -i\beta}}}
+  %      && \Real(s)>-\alpha
+  %      && \text{by \pref{ilem:opLT_cosexpstep}}
+  %    \\&= \mathrlap{
+  %         \frac{1}{2}\brs{\frac{1}{s +\alpha -i\beta}} \brs{\frac{s +\alpha +i\beta}{s +\alpha +i\beta}} +
+  %         \frac{1}{2}\brs{\frac{1}{s +\alpha +i\beta}} \brs{\frac{s +\alpha -i\beta}{s +\alpha -i\beta}}
+  %         \qquad\Real(s)>-\alpha
+  %         }
+  %    \\&= \frac{1}{2}\brs{\frac{(s +\alpha +i\beta) + (s +\alpha -i\beta)}{(s +\alpha +i\beta)(s +\alpha -i\beta)}}
+  %      && \Real(s)>-\alpha
+  %    \\&= \boxed{\frac{s +\alpha}{(s +\alpha +i\beta)(s +\alpha -i\beta)}}
+  %      && \Real(s)>-\alpha
+  %    \\&= \boxed{\frac{s +\alpha}{(s +\alpha)^2 + \beta^2}}
+  %      && \Real(s)>-\alpha
+  %  \end{align*}
+  %
+  %\item lemma: \label{ilem:opLT_cosexp}
+  %  \\$\begin{array}{>{\ds}rclM}
+  %       \lim_{x\to-\infty}\brs{e^{(-s + \alpha + i\beta)x} + e^{(s + \alpha -i\beta)x}}
+  %         &=& \brbl{\begin{array}{lMD}
+  %               0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (Region of Convergence is $\intoo{-\alpha}{\alpha}$)\\
+  %               \infty & otherwise                                    & (diverges)
+  %             \end{array}}
+  %       \\
+  %       \lim_{x\to\infty}\brs{e^{(-s -\alpha + i\beta)x} + e^{(s -\alpha -i\beta)x}}
+  %         &=& \brbl{\begin{array}{lMD}
+  %               0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (Region of Convergence is $\intoo{-\alpha}{\alpha}$)\\
+  %               \infty & otherwise                                    & (diverges)
+  %             \end{array}}
+  %     \end{array}$
+  %
+  %\item Alternate proof for (3):
+  %  \begin{align*}
+  %    \opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}}
+  %      &\eqd \int_{\R} \cos(\beta x)e^{-\alpha\abs{x}} e^{-s x}\dx
+  %      && \text{by def. of $\opLT$}&& \text{\xref{def:opLT}}
+  %    \\&= \int_{\R} \brs{\frac{e^{i\beta x}+e^{-i\beta x}}{2}} e^{-\alpha\abs{x}} e^{-s x}\dx
+  %      &&  \text{by \thme{Euler's Identity}}&&\text{\xref{thm:eid}}
+  %    \\&= \frac{1}{2}\int_{\R} \brs{e^{-\alpha\abs{x}+i\beta x -sx}+e^{-\alpha\abs{x}-i\beta x-sx}} \dx
+  %    \\&= \mathrlap{
+  %         \frac{1}{2}\int_{-\infty}^{0} \brs{e^{(-s + \alpha +i\beta)x} + e^{(-s + \alpha -i\beta)x}} \dx
+  %       + \frac{1}{2}\int_{0}^{\infty}  \brs{e^{(-s - \alpha +i\beta)x} + e^{(-s - \alpha -i\beta)x}} \dx
+  %         }
+  %    \\&= \mathrlap{
+  %         \frac{1}{2} \brs{\frac{e^{(-s + \alpha +i\beta)x}}{-s +\alpha +i\beta} + \frac{e^{(-s +\alpha - i\beta)x}}{-s + \alpha -i\beta}}_{-\infty}^{0}
+  %       + \frac{1}{2} \brs{\frac{e^{(-s - \alpha +i\beta)x}}{-s -\alpha +i\beta} + \frac{e^{(-s -\alpha - i\beta)x}}{-s - \alpha -i\beta}}_{0}^{\infty}
+  %         }
+  %     %&& \text{by Fundamental Theorem of Calculus}
+  %    \\&= \mathrlap{
+  %         \frac{1}{2} \brs{\frac{1}{-s + \alpha +i\beta} + \frac{1}{ -s+ \alpha -i\beta} - (0+0)}
+  %       + \frac{1}{2} \brs{(0+0)-\brp{\frac{1}{-s -\alpha +i\beta} + \frac{1}{-s -\alpha -i\beta}}}
+  %         }
+  %    \\&\indentx\text{by \pref{ilem:opLT_cosexp}}
+  %    \\&= \brs{\frac{-1}{s -( \alpha + i\beta)}}
+  %       + \brs{\frac{1}{-s -(-\alpha + i\beta)}}
+  %    \\&= \frac{-[s -(-\alpha + i\beta)] + [s -( \alpha + i\beta)]}
+  %              { [s -( \alpha + i\beta)]   [s -(-\alpha + i\beta)]}
+  %    \\&= \boxed{
+  %         \frac{-2\alpha}
+  %              { [s -( \alpha + i\beta)]   [s -(-\alpha + i\beta)]}
+  %         }
+  %    \\&= \frac{-2\alpha}
+  %              { s^2 -2i s\beta + ( \alpha + i\beta)(-\alpha + i\beta)}
+  %    \\&= \frac{-2\alpha}
+  %              { s^2 -2i s\beta + -(\alpha^2-\beta^2)}
+  %    \\&= \boxed{\frac{-2\alpha}
+  %                     { (s -i\beta)^2 -\alpha^2}}
+  %  \end{align*}
 \end{enumerate}
 \end{proof}
 
@@ -1191,8 +1192,8 @@ Let $A\eqd\Real(\alpha)$.
 
   \item Proof for (3):
     \begin{align*}
-      &\opLT\brs{\sin(\omega_o x)e^{-\alpha\abs{x}}}
-      \\&= \opLT\brs{\sin(\omega_o x)e^{-\alpha\abs{x}}\step(x)}
+      \opLT\brs{\sin(\omega_o x)e^{-\alpha\abs{x}}}
+        &= \opLT\brs{\sin(\omega_o x)e^{-\alpha\abs{x}}\step(x)}
          + \opLT\brs{\sin(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}
       \\&= \opLT\brs{\sin( \omega_o x)e^{-\alpha x}\step( x)}
          + \opLT\brs{\sin(-\omega_o x)e^{ \alpha x}\step(-x)}
